src/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
}

body {
  background-color: white;
}

.header {
  position: relative;
  /* use padding to create the space where the blue background lives */
}
.header-bg {
  position: absolute;
  width: 100%;
  /* increase this to make the blue shape cover more area */
  height: 50%;
  background-color: #0891b2;
  transform-origin: top left;
  transform: skewY(-30deg);
  z-index: -1;
  /* adds the shadow only to the visible edges of the shape */
  filter: drop-shadow(0 10px 15px rgba(0, 0, 0, 0.2));
}
/* targets the <picture> element */
.profile-image-top {
  display: block;
  /* limits the size of the image */
  width: 250px;
  /* centers the image horizontally */
  margin: 0 auto;
  padding-top: 2rem;
  position: relative;
  /* ensures it stays above the blue background */
  z-index: 1;
}
/* targets the actual <img> element */
.profile-image-top img {
  width: 100%;
  height: auto;
  display: block;
  border: none;
  box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
}
.profile-overlay {
  position: absolute;
  top: 70px;
  left: 0;
  width: 100%;
  text-align: center;
  z-index: 2;
  color: #fff;
  font-size: 1.7rem;
  text-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
  /* overlay doesn't block image interaction */
  pointer-events: none;
}
.profile-overlay h1 {
  font-family: "Playfair Display", serif;
  font-weight: 400;
}
.header-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-top: 3rem;
  z-index: 1;
}
.about-me {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-left: 30px;
  padding-right: 30px;
  color: #565656;
  line-height: 25px;
}
.about-me h2 {
  font-family: "Playfair Display", serif;
  font-size: 2.5rem;
  font-weight: 400;
  margin-bottom: 20px;
  color: black;
}
.about-me p {
  font-size: 1.2rem;
  max-width: 600px;
}
.social-icons {
  display: flex;
  gap: 15px;
  justify-content: center;
  margin-top: 1.5rem;
  width: 35px;
}

main {
  padding-top: 5rem;
  padding-bottom: 8rem;
}
.main-content {
  display: grid;
  grid-template-columns: 1fr;
  gap: 2rem;
  padding: 1.5rem;
}
.main-content h2 {
  font-family: "Playfair Display", serif;
  font-size: 2.5rem;
  font-weight: 400;
  color: black;
  text-align: center;
}
.cards-container {
  display: grid;
  gap: 3rem;
}
.project-card {
  min-height: 325px;
  background: #fff;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
  overflow: hidden;
  display: flex;
  flex-direction: column;
}
.card-screenshot {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 180px;
  padding: 3rem;
  color: #fff;
  font-size: 2.2rem;
  font-family: "Playfair Display", serif;
  text-align: center;
}
.card-content {
  padding: 1rem;
}
.card-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.card-content h3 {
  padding-left: 12px;
  font-family: "Playfair Display", serif;
  font-size: 1.2rem;
  font-weight: 400;
  margin-bottom: 0.5rem;
}
.card-content .card-icons {
  display: flex;
  gap: 10px;
  margin-bottom: 0.5rem;
}
.card-icons img,
svg {
  width: 20px;
}

.footer-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 460px;
  background-color: #0891b2;
}
.footer-content h2 {
  font-family: "Playfair Display", serif;
  font-size: 2.5rem;
  font-weight: 400;
  color: white;
  padding-top: 1rem;
}
.contact-text {
  max-width: 600px;
  padding: 1.5rem;
  padding-top: 1rem;
  font-size: 1.2rem;
  color: white;
}
.contact-address {
  padding-top: 2rem;
}
.contact-phone,
.contact-email {
  display: flex;
  align-items: center;
  padding-top: 10px;
  gap: 10px;
}
.phone-email-pair {
  padding-top: 2rem;
}
.phone-email-icons {
  display: none;
}
.contact-address,
.contact-phone,
.contact-email {
  font-size: 1rem;
}
.contact-text svg {
  width: 30px;
  fill: white;
}
.contact-social-icons {
  display: flex;
  justify-content: center;
  gap: 30px;
  width: 50px;
}
/* targets the <picture> element */
.profile-image-bottom {
  width: 320px;
}
/* targets the actual <img> element */
.profile-image-bottom img {
  width: 100%;
  height: auto;
  display: block;
  border: none;
}

@media (min-width: 768px) {
  .header-bg {
    /* increase this to make the blue shape cover more area */
    height: 40%;
    transform: skewY(-15deg);
  }
  .header-content {
    display: block;
  }
  .profile-overlay {
    top: 50px;
    padding-left: 30px;
  }
  /* targets the <picture> element */
  .profile-image-top {
    float: left;
    /* limits the size of the image */
    width: 300px;
    /* centers the image horizontally */
    margin: 2rem;
    margin-right: 1rem;
    margin-bottom: 0.5rem;
    padding-top: 0rem;
  }
  .about-me h2 {
    text-align: center;
    margin-bottom: 30px;
  }
  .about-me {
    display: block;
    align-items: unset;
    background-color: white;
    max-width: 650px;
    height: 400px;
    margin-top: 100px;
    margin-right: 75px;
    margin-left: 75px;
    padding-top: 75px;
    padding-right: 30px;
    padding-left: 30px;
    padding-bottom: 30px;
    color: #565656;
    line-height: 25px;
    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
  }
  .social-icons {
    display: none;
  }

  .main-content {
    padding: 4rem;
    padding-top: 0rem;
  }
  .main-content h2 {
    margin-bottom: -1.5rem;
    text-align: left;
  }
  .cards-container {
    grid-template-columns: repeat(2, 1fr);
  }
  .card-header h3 {
    padding-left: 0px;
  }

  footer {
    display: flex;
    background-color: #0891b2;
    padding: 2rem;
    padding-bottom: 0rem;
  }
  .footer-content h2 {
    padding-left: 1.5rem;
  }
  .footer-content {
    display: block;
    max-width: 350px;
  }
  .phone-email-icons {
    display: inline-block;
  }
  .contact-social-icons {
    justify-content: flex-start;
    margin-left: 1.5rem;
    width: 30px;
  }
  .profile-image-bottom {
    width: 275px;
    margin-left: 5rem;
  }
}

@media (min-width: 1024px) {
  .header-bg {
    /* increase this to make the blue shape cover more area */
    height: 50%;
    transform: skewY(-15deg);
  }
  .header-content {
    display: block;
  }
  .profile-overlay {
    top: 50px;
    padding-right: 525px;
  }
  /* targets the <picture> element */
  .profile-image-top {
    float: left;
    /* limits the size of the image */
    width: 400px;
    /* centers the image horizontally */
    margin: 4rem;
    margin-top: 3rem;
    margin-right: 1rem;
    margin-bottom: 0.5rem;
    padding-top: 0rem;
  }
  .about-me h2 {
    text-align: left;
    margin-bottom: 30px;
  }
  .about-me {
    display: block;
    align-items: unset;
    background-color: white;
    max-width: 1200px;
    height: 375px;
    margin-top: 50px;
    margin-right: 75px;
    margin-left: 450px;
    padding-top: 40px;
    padding-right: 30px;
    padding-left: 30px;
    padding-bottom: 30px;
    color: #565656;
    line-height: 25px;
    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
  }
  .social-icons {
    display: flex;
    gap: 15px;
    justify-content: center;
    margin-top: 3.5rem;
    margin-left: 375px;
    width: 25px;
  }

  .main-content {
    padding: 4rem;
    padding-bottom: 0rem;
  }
  .main-content h2 {
    margin-bottom: -1.5rem;
    text-align: left;
  }
  .cards-container {
    grid-template-columns: repeat(3, 1fr);
  }
  .card-header h3 {
    padding-left: 0px;
  }

  footer {
    display: flex;
    background-color: #0891b2;
    padding: 2rem;
    padding-bottom: 0rem;
  }
  .footer-content h2 {
    padding-left: 1.5rem;
  }
  .footer-content {
    display: block;
    max-width: 350px;
  }
  .phone-email-icons {
    display: inline-block;
  }
  .contact-social-icons {
    justify-content: flex-start;
    margin-left: 1.5rem;
    width: 30px;
  }
  .profile-image-bottom {
    width: 550px;
    margin-top: 1rem;
    margin-left: 1rem;
  }
}

@media (min-width: 1920px) {
  .header-bg {
    /* increase this to make the blue shape cover more area */
    height: 80%;
    transform: skewY(-10deg);
  }
  .header-content {
    display: block;
  }
  .profile-overlay {
    top: 90px;
    padding-right: 1075px;
    font-size: 3rem;
  }
  /* targets the <picture> element */
  .profile-image-top {
    float: left;
    /* limits the size of the image */
    width: 650px;
    /* centers the image horizontally */
    margin: 6rem;
    margin-top: 4rem;
    margin-right: 1rem;
    margin-bottom: 0.5rem;
    padding-top: 0rem;
  }
  .about-me h2 {
    text-align: left;
    margin-bottom: 50px;
    padding-top: 2rem;
    padding-left: 3rem;
    font-size: 3rem;
  }
  .about-me {
    display: block;
    align-items: unset;
    background-color: white;
    max-width: 1100px;
    height: 625px;
    margin-top: 70px;
    margin-right: 75px;
    margin-left: 700px;
    padding-top: 40px;
    padding-right: 30px;
    padding-left: 30px;
    padding-bottom: 30px;
    color: #565656;
    line-height: 25px;
    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
  }
  .about-me p {
    padding-left: 3rem;
    max-width: 800px;
    font-size: 1.75rem;
    line-height: 2;
  }
  .social-icons {
    display: flex;
    gap: 30px;
    justify-content: center;
    margin-top: 3rem;
    margin-left: 900px;
    width: 45px;
  }

  .main-content {
    padding: 6rem;
    padding-bottom: 0rem;
  }
  .main-content h2 {
    margin-bottom: -1.5rem;
    text-align: left;
  }
  .cards-container {
    grid-template-columns: repeat(3, 1fr);
    min-height: 80rem;
  }
  .card-header h3 {
    padding-left: 0px;
  }
  .card-screenshot {
    font-size: 3rem;
    min-height: 25rem;
  }
  .card-content h3 {
    font-size: 1.75rem;
  }
  .card-content {
    font-size: 1.2rem;
    padding: 2rem;
  }
  .card-icons img,
  svg {
    width: 30px;
  }

  footer {
    display: flex;
    background-color: #0891b2;
    padding: 2rem;
    padding-left: 4rem;
    padding-bottom: 0rem;
  }
  .footer-content h2 {
    width: 500px;
    padding-left: 1.5rem;
    font-size: 4rem;
  }
  .footer-content {
    display: block;
    max-width: 350px;
    line-height: 1.5;
  }
  .contact-text,
  .contact-address,
  .contact-phone,
  .contact-email {
    width: 500px;
    font-size: 1.75rem;
  }
  .phone-email-icons {
    display: inline-block;
  }
  .contact-social-icons {
    justify-content: flex-start;
    margin-left: 1.5rem;
    width: 50px;
  }
  .profile-image-bottom {
    width: 900px;
    margin-top: 1rem;
    margin-bottom: 3rem;
    margin-left: 30rem;
  }
}

